# ezeepedano.github.io

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  DESIGN.md  Dockerfile  Formulas_Organizadas_Final.xlsx  Install_and_Run.bat  README.md  Reset_Install.bat  acua_debug_safe.txt  acua_out.txt  acua_verify.txt  analyze_tn_csv.py  comprehensive_test.py  create_test_user.py  debug_kpi_shell.py  debug_log.txt  debug_output.txt  debug_stock_v2.py  docker-compose.yml  dump_all_sales.py  fix_links.py  index.html  performance_test.py  portafolio.html  pyproject.toml  requirements.txt  run_migration.bat  run_traceability_test.py  security_audit.py  start_app.bat  test_full_system.py  test_output.txt  test_results.txt  tn_headers.txt  verify_dashboard_endpoints.py  verify_tn_import.py
.claude/: launch.json  settings.local.json
Planillas de Trazabilidad/: Planillas_Trazabilidad.xlsx  Planillas_Trazabilidad_v2.xlsx  Planillas_Trazabilidad_v3_Simple.xlsx
accounting/: forms.py  models.py  signals.py  tests_integration.py  urls.py  views.py
core_erp/: apps.py  constants.py  exceptions.py  middleware.py  pdf_utils.py  settings.py  urls.py
dashboard/: excel_exports.py  urls.py  views.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  dashboard_requirements.md  data_integration_plan.md
finance/: apps.py  forms.py  ignore_tests_history.py  models.py  services.py  signals.py  tests_cleanup_verification.py  tests_dashboard_views.py  tests_forms.py  tests_services.py  tests_views.py  urls.py  views.py
hr/: models.py  urls.py  views.py
inventory/: admin.py  apps.py  forms.py  models.py  serializers.py  services.py  services_import.py  services_intelligence.py  signals.py  tests.py  tests_forms.py  tests_intelligence.py  tests_views.py  urls.py  views.py
logistics/: admin.py  apps.py  forms.py  (+4 more)
(+338 files in other folders)
